Improve mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <meta property="og:image" content="/banner.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
 
+  <!-- Bootstrap theme -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/flatly/bootstrap.min.css" rel="stylesheet">
+
   <style>
     :root{
       --brand:#cc0000; /* NC State red */
@@ -29,18 +33,8 @@
     html,body{margin:0;padding:0;color:var(--ink);background:var(--bg);font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,"Noto Sans",sans-serif}
     a{color:var(--brand)}
 
-    /* Top navbar */
-    .nav{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid #e5e7eb}
-    .container{max-width:1100px;margin:0 auto;padding:0 20px}
-    .nav-inner{display:flex;align-items:center;justify-content:space-between;height:64px}
-    .brand{display:flex;gap:12px;align-items:center;font-weight:800;letter-spacing:.2px}
-    .brand img{height:28px}
-    .nav a.btn{padding:10px 14px;border-radius:999px;background:var(--brand);color:#fff;text-decoration:none;font-weight:600}
-    .nav a.btn:hover{background:var(--brand-dark)}
-
     /* Hero */
     .hero{background:#fff}
-    .hero-grid{display:grid;grid-template-columns:1.4fr .9fr;gap:24px;padding:40px 0}
     .eyebrow{color:var(--brand);font-weight:700;text-transform:uppercase;font-size:.8rem;letter-spacing:.08em}
     h1{font-size:2.25rem;line-height:1.15;margin:.35rem 0 0}
     .meta{margin-top:10px;color:var(--muted);display:flex;flex-wrap:wrap;gap:14px;font-size:.95rem}
@@ -53,12 +47,9 @@
     .sticky{position:sticky;top:88px}
     .card .pad{padding:18px}
     .price{font-size:1.8rem;font-weight:800}
-    .btn-primary{display:block;text-align:center;background:var(--brand);color:#fff;text-decoration:none;padding:12px 16px;border-radius:12px;font-weight:700}
-    .btn-primary:hover{background:var(--brand-dark)}
 
     /* Section */
     section{padding:36px 0}
-    .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:24px}
     .kpis{display:flex;gap:14px;flex-wrap:wrap}
     .kpi{flex:1;min-width:160px;background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:14px}
     .kpi b{font-size:1.4rem}
@@ -78,9 +69,24 @@
 
     /* Responsive */
     @media (max-width: 960px){
-      .hero-grid{grid-template-columns:1fr}
-      .grid-2{grid-template-columns:1fr}
       .sticky{position:static}
+    }
+    @media (max-width: 600px){
+      .slot{grid-template-columns:1fr}
+    }
+
+    /* Dark theme */
+    @media (prefers-color-scheme: dark){
+      :root{
+        --ink:#f3f4f6;
+        --muted:#9ca3af;
+        --bg:#111827;
+        --card:#1f2937;
+        --ring:rgba(204,0,0,0.3);
+      }
+      body{background:var(--bg);color:var(--ink);}
+      .hero,.card,.slot,details,footer,.kpi{background:var(--card);color:var(--ink);}
+      .kpi, .slot, details, .card, footer{border-color:#374151;}
     }
   </style>
 
@@ -112,74 +118,82 @@
 </head>
 <body>
   <!-- NAV -->
-  <div class="nav">
-    <div class="container nav-inner">
-      <div class="brand">
-        <img src="/ncsu-mark.png" alt="NC State mark"/>
-        <span>NC State LLM Hackathon</span>
-      </div>
-      <a class="btn" href="#register">Register</a>
+  <nav class="navbar navbar-light bg-white border-bottom sticky-top">
+    <div class="container-fluid">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+        <img src="/ncsu-mark.png" alt="NC State mark" height="28"/>
+        <span class="fw-bold">NC State LLM Hackathon</span>
+      </a>
+      <a class="btn btn-primary" href="#register">Register</a>
     </div>
-  </div>
+  </nav>
 
   <!-- HERO -->
   <header class="hero">
-    <div class="container hero-grid" style="padding-bottom:20px">
-      <div>
-        <div class="eyebrow">Materials Science • Chemistry • AI/LLMs</div>
-        <h1>LLM Hackathon for Applications in Materials Science & Chemistry</h1>
-        <div class="meta">
-          <span class="chip" title="Dates">Oct 25–27, 2025</span>
-          <span class="chip" title="Format">Hybrid (On‑site & Online)</span>
-          <span class="chip" title="Location">NC State — EB3, Raleigh NC</span>
-          <span class="chip" title="Cost">Free</span>
-        </div>
-        <p style="margin-top:14px;max-width:60ch;color:#374151">A 48‑hour build sprint to prototype research and teaching tools powered by large language models for discovery, simulation workflows, data curation, and scientific communication in materials science and chemistry.</p>
-        <div class="kpis" style="margin-top:12px">
-          <div class="kpi"><b>2–5</b><div class="muted">Team size</div></div>
-          <div class="kpi"><b>$ Prizes</b><div class="muted">Awards for top teams</div></div>
-          <div class="kpi"><b>Mentors</b><div class="muted">Industry & faculty</div></div>
-        </div>
-      </div>
-      <aside class="sticky">
-        <div class="card">
-          <div class="cover"><img src="/banner.png" alt="Hackathon banner"></div>
-          <div class="pad">
-            <div class="price">Free</div>
-            <p style="margin:.4rem 0 1rem;color:var(--muted)">Registration required • Limited spots</p>
-            <a class="btn-primary" href="#register">Register on this page</a>
-            <ul style="margin:14px 0 0 18px;color:#374151">
-              <li>Beginner‑friendly workshops</li>
-              <li>Mentor office hours</li>
-              <li>Meals provided on‑site</li>
-            </ul>
+    <div class="container py-4">
+      <div class="row gy-4 align-items-start">
+        <div class="col-lg-8">
+          <div class="eyebrow">Materials Science • Chemistry • AI/LLMs</div>
+          <h1>LLM Hackathon for Applications in Materials Science & Chemistry</h1>
+          <div class="meta">
+            <span class="chip" title="Dates">Oct 25–27, 2025</span>
+            <span class="chip" title="Format">Hybrid (On‑site & Online)</span>
+            <span class="chip" title="Location">NC State — EB3, Raleigh NC</span>
+            <span class="chip" title="Cost">Free</span>
+          </div>
+          <p style="margin-top:14px;max-width:60ch;color:#374151">A 48‑hour build sprint to prototype research and teaching tools powered by large language models for discovery, simulation workflows, data curation, and scientific communication in materials science and chemistry.</p>
+          <div class="kpis" style="margin-top:12px">
+            <div class="kpi"><b>2–5</b><div class="muted">Team size</div></div>
+            <div class="kpi"><b>$ Prizes</b><div class="muted">Awards for top teams</div></div>
+            <div class="kpi"><b>Mentors</b><div class="muted">Industry & faculty</div></div>
           </div>
         </div>
-      </aside>
+        <aside class="col-lg-4 sticky">
+          <div class="card">
+            <div class="cover"><img src="/banner.png" alt="Hackathon banner"></div>
+            <div class="pad">
+              <div class="price">Free</div>
+              <p style="margin:.4rem 0 1rem;color:var(--muted)">Registration required • Limited spots</p>
+              <a class="btn btn-primary w-100" href="#register">Register on this page</a>
+              <ul style="margin:14px 0 0 18px;color:#374151">
+                <li>Beginner‑friendly workshops</li>
+                <li>Mentor office hours</li>
+                <li>Meals provided on‑site</li>
+              </ul>
+            </div>
+          </div>
+        </aside>
+      </div>
     </div>
   </header>
 
   <!-- WHAT YOU'LL DO / TRACKS -->
   <section>
-    <div class="container grid-2">
-      <div class="card" style="padding:18px">
-        <h2 style="margin-top:0">Tracks & Ideas</h2>
-        <ul style="line-height:1.7">
-          <li>LLM copilots for **materials databases** and ELNs</li>
-          <li>Workflow agents for **MD/DFT** setup, execution, and analysis</li>
-          <li>Design tools for **polymers, soft & biomaterials**</li>
-          <li>Education & outreach: interactive labs, grading aides</li>
-          <li>Open science: dataset curation, metadata extraction</li>
-        </ul>
-      </div>
-      <div class="card" style="padding:18px">
-        <h2 style="margin-top:0">Judging Criteria</h2>
-        <ul style="line-height:1.7">
-          <li><b>Impact:</b> addresses a real research/education need</li>
-          <li><b>Originality:</b> novel approach or integration</li>
-          <li><b>Technical depth:</b> sound methods & evaluation</li>
-          <li><b>Presentation:</b> clarity, demo quality, documentation</li>
-        </ul>
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-md-6">
+          <div class="card p-3">
+            <h2 style="margin-top:0">Tracks & Ideas</h2>
+            <ul style="line-height:1.7">
+              <li>LLM copilots for **materials databases** and ELNs</li>
+              <li>Workflow agents for **MD/DFT** setup, execution, and analysis</li>
+              <li>Design tools for **polymers, soft & biomaterials**</li>
+              <li>Education & outreach: interactive labs, grading aides</li>
+              <li>Open science: dataset curation, metadata extraction</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card p-3">
+            <h2 style="margin-top:0">Judging Criteria</h2>
+            <ul style="line-height:1.7">
+              <li><b>Impact:</b> addresses a real research/education need</li>
+              <li><b>Originality:</b> novel approach or integration</li>
+              <li><b>Technical depth:</b> sound methods & evaluation</li>
+              <li><b>Presentation:</b> clarity, demo quality, documentation</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -210,15 +224,19 @@
 
   <!-- LOCATION + MAP -->
   <section>
-    <div class="container grid-2">
-      <div>
-        <h2>Location</h2>
-        <p><b>NC State — Engineering Building III (EB3)</b><br>911 Partners Way, Raleigh, NC 27606</p>
-        <p>Hybrid participation is available for remote teams.</p>
-      </div>
-      <div class="card" style="overflow:hidden">
-        <iframe title="Map to EB3" width="100%" height="300" loading="lazy" style="border:0" allowfullscreen
-          src="https://www.google.com/maps?q=NC+State+Engineering+Building+III&output=embed"></iframe>
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-lg-6">
+          <h2>Location</h2>
+          <p><b>NC State — Engineering Building III (EB3)</b><br>911 Partners Way, Raleigh, NC 27606</p>
+          <p>Hybrid participation is available for remote teams.</p>
+        </div>
+        <div class="col-lg-6">
+          <div class="card overflow-hidden h-100">
+            <iframe title="Map to EB3" class="w-100" height="300" loading="lazy" style="border:0" allowfullscreen
+              src="https://www.google.com/maps?q=NC+State+Engineering+Building+III&output=embed"></iframe>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -229,7 +247,8 @@
       <h2>Register</h2>
       <p style="color:#374151">Complete the form below. One submission per participant. Teams (2–7) may be formed after registration or bring your own.</p>
       <div class="card" style="padding:0;overflow:hidden">
-       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdhADJ6hzT-uZguO0JITpIpb1NrM0HYbh_ROxykZ5wkBdgzWg/viewform?embedded=true" width="640" height="970" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdhADJ6hzT-uZguO0JITpIpb1NrM0HYbh_ROxykZ5wkBdgzWg/viewform?embedded=true"
+          style="border:0;width:100%;height:970px" frameborder="0" marginheight="0" marginwidth="0" loading="lazy">Loading…</iframe>
       </div>
     </div>
   </section>
