--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <!-- Sidebar first on mobile, second on desktop -->
         <aside class="col-lg-3 order-1 order-lg-2" aria-label="Registration sidebar">
           <div class="card">
-            <div class="cover"><img src="./hackathon_poster.png" alt="Hackathon banner" loading="lazy"></div>
+            <div class="cover"><img src="./hackathon_banner.jpg" alt="Hackathon banner" loading="lazy"></div>
             <div class="pad">
               <div class="price">Free</div>
               <p class="m-0" style="color:white">Registration required • Limited spots</p>
