--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <div class="card p-3 h-100">
             <h2 class="mt-0">Tracks &amp; Ideas</h2>
             <ul style="line-height:1.7">
-              <li>LLM copilots for <strong>materials databases</strong> and ELNs</li>
+              <li>LLM copilots for <strong>materials databases</strong> and electronic lab notebooks (ELNs)</li>
               <li>Workflow agents for <strong>MD/DFT</strong> setup, execution, and analysis</li>
               <li>Design tools for <strong>polymers, soft &amp; biomaterials</strong></li>
               <li>Education &amp; outreach: interactive labs, grading aides</li>
